Animation fix and coloring on mobile

--- a/src/app/components/chess-board/chess-board.component.scss
+++ b/src/app/components/chess-board/chess-board.component.scss
@@ -141,44 +141,75 @@ $last-move-dark: #aaa23a;
   cursor: grab;
   z-index: 1;
   font-family: 'Segoe UI Symbol', 'Noto Sans Symbols 2', 'Noto Sans Symbols', 'Apple Symbols', 'Arial Unicode MS', sans-serif;
-
   @media (max-width: 768px) {
     font-size: min(10vw, 60px);
   }
 
   @media (max-width: 480px) {
-    font-size: min(11vw, 60px);
+    font-size: min(10vw, 60px);
   }
 
   &:active {
     cursor: grabbing;
   }
 
+
   &.white-piece {
     color: #fff;
     text-shadow:
-      -1px -1px 0 #000,
-       0px -1px 0 #000,
-       1px -1px 0 #000,
-      -1px  0px 0 #000,
-       1px  0px 0 #000,
-      -1px  1px 0 #000,
-       0px  1px 0 #000,
-       1px  1px 0 #000,
-      -2px -2px 0 #000,
-       0px -2px 0 #000,
-       2px -2px 0 #000,
-      -2px  0px 0 #000,
-       2px  0px 0 #000,
-      -2px  2px 0 #000,
-       0px  2px 0 #000,
-       2px  2px 0 #000;
+      -1px -1px 0 rgba(0, 0, 0, 0.75),
+       0px -1px 0 rgba(0, 0, 0, 0.75),
+       1px -1px 0 rgba(0, 0, 0, 0.75),
+      -1px  0px 0 rgba(0, 0, 0, 0.75),
+       1px  0px 0 rgba(0, 0, 0, 0.75),
+      -1px  1px 0 rgba(0, 0, 0, 0.75),
+       0px  1px 0 rgba(0, 0, 0, 0.75),
+       1px  1px 0 rgba(0, 0, 0, 0.75),
+      -2px  0px 0 rgba(0, 0, 0, 0.75),
+       2px  0px 0 rgba(0, 0, 0, 0.75),
+       0px -2px 0 rgba(0, 0, 0, 0.75),
+       0px  2px 0 rgba(0, 0, 0, 0.75);
+
+    @media (max-width: 480px) {
+      text-shadow:
+        -1px -1px 0 rgba(0, 0, 0, 0.5),
+         0px -1px 0 rgba(0, 0, 0, 0.5),
+         1px -1px 0 rgba(0, 0, 0, 0.5),
+        -1px  0px 0 rgba(0, 0, 0, 0.5),
+         1px  0px 0 rgba(0, 0, 0, 0.5),
+        -1px  1px 0 rgba(0, 0, 0, 0.5),
+         0px  1px 0 rgba(0, 0, 0, 0.5),
+         1px  1px 0 rgba(0, 0, 0, 0.5);
+    }
   }
 
   &.black-piece {
     color: #1a1a1a;
     text-shadow:
-      0 1px 2px rgba(0, 0, 0, 0.4);
+      -1px -1px 0 rgba(128, 116, 116, 0.80),
+       0px -1px 0 rgba(128, 116, 116, 0.80),
+       1px -1px 0 rgba(128, 116, 116, 0.80),
+      -1px  0px 0 rgba(128, 116, 116, 0.80),
+       1px  0px 0 rgba(128, 116, 116, 0.80),
+      -1px  1px 0 rgba(128, 116, 116, 0.80),
+       0px  1px 0 rgba(128, 116, 116, 0.80),
+       1px  1px 0 rgba(128, 116, 116, 0.80),
+      -2px  0px 0 rgba(128, 116, 116, 0.80),
+       2px  0px 0 rgba(128, 116, 116, 0.80),
+       0px -2px 0 rgba(128, 116, 116, 0.80),
+       0px  2px 0 rgba(128, 116, 116, 0.80);
+
+    @media (max-width: 480px) {
+      text-shadow:
+        -1px -1px 0 rgba(128, 116, 116, 0.5),
+         0px -1px 0 rgba(128, 116, 116, 0.5),
+         1px -1px 0 rgba(128, 116, 116, 0.5),
+        -1px  0px 0 rgba(128, 116, 116, 0.5),
+         1px  0px 0 rgba(128, 116, 116, 0.5),
+        -1px  1px 0 rgba(128, 116, 116, 0.5),
+         0px  1px 0 rgba(128, 116, 116, 0.5),
+         1px  1px 0 rgba(128, 116, 116, 0.5);
+    }
   }
 }
 
